# RustWeatherGetter

./: Cargo.toml  README.md  index.html  index.js  style.css
src/: lib.rs
