[package]
name = "hot_or_not_3"
version = "0.1.0"
authors = ["Jonty Leslie "]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
console_error_panic_hook = "0.1.7"

wasm-bindgen = { version = "=0.2.95", default-features = false, features = [ "std", "spans" ] }
wasm-bindgen-futures = { version = "=0.4.45", default-features = false }
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "gzip"] }
tokio = { version = "=1.41.0", features = ["sync", "rt"] }
